# nushell

./: Cargo.toml
crates/nu-cli/: Cargo.toml
crates/nu-cli/src/: nu_highlight.rs  print.rs  prompt.rs  repl.rs
crates/nu-cli/src/commands/: keybindings_default.rs  keybindings_list.rs  keybindings_listen.rs
crates/nu-cli/src/completions/: completion_options.rs
crates/nu-cmd-lang/: Cargo.toml  build.rs
crates/nu-cmd-lang/src/core_commands/: alias.rs  break_.rs  collect.rs  const_.rs  continue_.rs  def.rs  describe.rs  do_.rs  echo.rs  error_make.rs  export.rs  export_alias.rs  export_const.rs  export_def.rs  export_extern.rs  export_module.rs  export_use.rs  extern_.rs  for_.rs  hide.rs  hide_env.rs  if_.rs  ignore.rs  let_.rs  loop_.rs  match_.rs  module.rs  mut_.rs  return_.rs  try_.rs  use_.rs  version.rs  while_.rs
crates/nu-command/: Cargo.toml
crates/nu-command/src/bytes/: add.rs  at.rs  build_.rs  collect.rs  length.rs  (+7 more)
crates/nu-embed/: Cargo.toml
crates/nu-embed/examples/: basic.rs
crates/nu-embed/src/: lib.rs
crates/nu-explore/src/: explore.rs
crates/nu-parser/src/: known_external.rs
crates/nu-path/src/: components.rs  trailing_slash.rs
crates/nu-plugin-engine/src/: declaration.rs  process.rs
crates/nu-plugin-test-support/src/: lib.rs
crates/nu-pretty-hex/src/: pretty_hex.rs
crates/nu-protocol/src/: signature.rs
crates/nu-utils/src/: deansi.rs
crates/nu_plugin_custom_values/src/: generate.rs  generate2.rs  update.rs
crates/nu_plugin_query/src/: query_json.rs  query_web.rs  query_webpage_info.rs  web_tables.rs
src/: command.rs
(+502 files in other folders)
